# server

./: .default-python-packages.license  .gitignore  .mise.toml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: push.yml  release.yml
.reuse/: dep5
assets/html/: index.html
config/deploy/: 10_server.Deployment.yaml  10_server.Service.yaml  kustomization.yaml
config/overlays/dev/: 00_namespace.yaml  10_server.Deployment.patch.yaml  10_server.Service.yaml  kustomization.yaml
src/: command.rs  lib.rs  main.rs  server.rs
