# SPDX-FileCopyrightText: 2023 Andrew Pantuso <ajpantuso@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
tokio = { version = "1.34.0", features = ["full"] }
warp = { version = "0.3.6", features = ["tls"] }
